--- a/SEPFramework/Membership/Register.xaml
+++ b/SEPFramework/Membership/Register.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SEPFramework.Membership"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-         Title="Màn hình đăng ký" Height="320" Width="460" WindowStartupLocation="CenterScreen">
+         Title="Màn hình đăng ký" Height="340" Width="460" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -15,6 +15,8 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -23,13 +25,15 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Content="ĐĂNG KÝ" HorizontalContentAlignment="Center" FontSize="20" FontWeight="Bold"/>
-        <Label Grid.Row="1" Grid.Column="0" Content="Username" FontSize="16" Margin="8"/>
-        <TextBox x:Name="txtUserName" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,4,4,4" VerticalContentAlignment="Center"/>
-        <Label Grid.Row="2" Grid.Column="0" Content="Password" FontSize="16" Margin="8"/>
-        <PasswordBox x:Name="txtPassword" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,4,4,4" VerticalContentAlignment="Center"/>
-        <Label Grid.Row="3" Grid.Column="0" Content="ConFirm Password" FontSize="16" Margin="8"/>
-        <PasswordBox x:Name="txtConFirmPassword" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,4,4,4" VerticalContentAlignment="Center"/>
-        <Label x:Name="lblLogin" PreviewMouseDown="lblLogin_PreviewMouseDown"  Grid.Row="4" Grid.Column="0" Content="Đăng nhập" Margin="4" TextElement.FontStyle="Italic" Foreground="blue">
+        <Label Grid.Row="1" Grid.Column="0" Content="Email" FontSize="16" Margin="8"/>
+        <TextBox x:Name="txtEmail" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,4,4,4" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="Username" FontSize="16" Margin="8"/>
+        <TextBox x:Name="txtUserName" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,4,4,4" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="Password" FontSize="16" Margin="8"/>
+        <PasswordBox x:Name="txtPassword" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,4,4,4" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="4" Grid.Column="0" Content="ConFirm Password" FontSize="16" Margin="8"/>
+        <PasswordBox x:Name="txtConFirmPassword" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,4,4,4" VerticalContentAlignment="Center"/>
+        <Label x:Name="lblLogin" PreviewMouseDown="lblLogin_PreviewMouseDown"  Grid.Row="5" Grid.Column="0" Content="Đăng nhập" Margin="4" TextElement.FontStyle="Italic" Foreground="blue">
             <Label.Style>
                 <Style TargetType="Label">
                     <Style.Triggers>
@@ -42,7 +46,7 @@
             </Label.Style>
         </Label>
 
-        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Orientation="Horizontal" HorizontalAlignment="Center">
+        <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Content="Đăng ký" Width="80" Margin="0,4,4,4" Height="30" x:Name="btnRegister" Click="btnRegister_Click"/>
             <Button Content="Hủy" Width="80" Margin="4,4,0,4" Height="30" x:Name="btnCancel" Click="btnCancel_Click"/>
         </StackPanel>
